# EN.605.707.SP24

./: AbstractFactory.wsd  Adapter.wsd  Builder.wsd  Class Adapter.wsd  Composite.wsd  Decorator.wsd  FactoryMethod.wsd  Iterator.wsd  Monostate.wsd  Object Adapter.wsd  Observer.wsd  Proxy.wsd  Readme.txt  Roles - Assignment Module 02.xlsx  Roles - Assignment Module 03.xlsx  Roles - Assignment Module 04.xlsx  Roles - Assignment Module 05.xlsx  Roles - Assignment Module 07.xlsx  Roles - Assignment Module 08.xlsx  Strategy.wsd  TemplateMethod.wsd  Test1.xml
src/: Adapter.C  Adapter.H  AdapterDOMAttr.hpp  AdapterDOMDocument.cpp  AdapterDOMDocument.hpp  AdapterDOMElement.hpp  AdapterDOMNode.cpp  AdapterDOMNode.hpp  AdapterDOMNodeList.hpp  AdapterDOMText.hpp  Attr.C  Attr.H  Builder.C  Builder.H  CMakeLists.txt  Director.C  Director.H  Document.C  Document.H  Element.C  Element.H  ElementDecorator.C  ElementDecorator.H  NamedNodeMap.C  NamedNodeMap.H  Node.C  Node.H  NodeDecorator.C  NodeDecorator.H  NodeList.H  Observer.C  Observer.H  README.txt  Test.C  Text.C  Text.H  ValidChildren.C  ValidChildren.H  WhitespaceStrategy.H  XMLBuilder.C  (+9 more)
src/xerces/: DOMAttr.hpp  DOMDocument.hpp  DOMElement.hpp  DOMNode.hpp  DOMNodeList.hpp  DOMText.hpp
